--- a/Break Bricks Game/Break Bricks Game.vcxproj
+++ b/Break Bricks Game/Break Bricks Game.vcxproj
@@ -125,6 +125,7 @@
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Paddle.cpp" />
