--- a/Break Bricks Game/Break Bricks Game.vcxproj.filters
+++ b/Break Bricks Game/Break Bricks Game.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Item.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="User.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h">
